M_tests/2be_deleted_fcount_1.channel
number of channels, 4

end point number and temperature, 1
1 2 80

model, mean temperature
mass in, 1, 0.0005
# powerXdensity, , 
heat capacity, 3494
viscosity, 3.405e-06
viscosity model, 1
density, 1065
pressure out, 4, 0
cross section, rectangular 

diameters 
0.002
0.002
0.002
0.002

heights 
0.0005
0.0005
0.0005
0.0005

nurbs control points
0 0.1
0.02 0.08
nurbs knot vector
0 0 1 1 
connectivity
1 2

nurbs control points
0.02 0.08
0.02 0.05
0.08 0.02
nurbs knot vector
0 0 0.5 1 1 
connectivity
2 3

nurbs control points
0.02 0.08
0.08 0.05
0.08 0.02
nurbs knot vector
0 0 0.5 1 1 
connectivity
2 3

nurbs control points
0.08 0.02
0.1 0
nurbs knot vector
0 0 1 1 
connectivity
3 4

number of design variables, 8 
design
channel, 2, cpt, 1, x, 0, 0.1 
design
channel, 2, cpt, 1, y, 0, 0.1 
design
channel, 2, cpt, 2, x, 0, 0.1 
design
channel, 2, cpt, 2, y, 0, 0.1 
design
channel, 3, cpt, 2, x, 0, 0.1 
design
channel, 3, cpt, 2, y, 0, 0.1 
design
channel, 4, cpt, 1, x, 0, 0.1 
design
channel, 4, cpt, 1, y, 0, 0.1 
